--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "stop": "pm2 stop all",
     "delete": "pm2 delete all",
     "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "dance2die",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.9",
     "esbuild": "^0.13.15",
+    "esbuild-jest": "^0.5.0",
     "esbuild-node-tsc": "^1.8.0",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.15",
     "pm2": "^5.1.2"
   }
