--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "stop": "pm2 stop all",
     "delete": "pm2 delete all",
     "start": "nodemon",
-    "test": "jest"
+    "test": "jest",
+    "watch": "jest --watchAll"
   },
   "keywords": [],
   "author": "dance2die",
